test: get functional tests working and passing again

--- a/.env
+++ b/.env
@@ -20,10 +20,10 @@ MEERKAT_SIGNING_CRL_FILE=data/crl.pem
 MEERKAT_SIGNING_CA_FILE=data/keypair/cert.pem
 # Broken because of a bug in the ITU specifications: PKI-Stub definitions change to EXPLICIT tagging!
 MEERKAT_ATTR_CERT_CHAIN_FILE=data/attr-cert.pem
-MEERKAT_SENTINEL_DOMAIN=google.com
+# MEERKAT_SENTINEL_DOMAIN=google.com
 MEERKAT_ADMINISTRATOR_EMAIL=jonathan@wilbur.space
-MEERKAT_INIT_JS=data/init.mjs
-MEERKAT_BULK_INSERT_MODE=1
+# MEERKAT_INIT_JS=data/init.mjs
+# MEERKAT_BULK_INSERT_MODE=1
 # There is no point in having different bind sleeps for different protocols,
 # because a nefarious attacker could just pick the protocol with the smallest
 # sleep and try to authenticate against that.
