fixup! feat: produce debian package

--- a/apps/meerkat/project.json
+++ b/apps/meerkat/project.json
@@ -51,6 +51,11 @@
                         "glob": "prisma/**",
                         "input": "apps/meerkat/src",
                         "output": "."
+                    },
+                                        {
+                        "glob": ".npmrc",
+                        "input": "apps/meerkat",
+                        "output": "."
                     }
                 ]
             }
