--- a/debian/rules
+++ b/debian/rules
@@ -4,6 +4,5 @@
 	dh $@
 
 override_dh_auto_build:
-	cd dist/apps/meerkat
-	npm ci --only=production --no-audit --no-fund --no-save
-	npm install --no-package-lock --no-save prisma
+	cd dist/apps/meerkat && npm ci --only=production --no-audit --no-fund --no-save
+	cd dist/apps/meerkat && npm install --no-package-lock --no-save prisma
