--- a/debian/rules
+++ b/debian/rules
@@ -4,5 +4,11 @@
 	dh $@
 
 override_dh_auto_build:
-	cd dist/apps/meerkat && npm ci --only=production --no-audit --no-fund --no-save
-	cd dist/apps/meerkat && npm install --no-package-lock --no-save prisma
+	npm ci --no-audit --no-fund --no-save
+	npx nx --tuiAutoExit=true --outputStyle=static run meerkat:build --skipNxCache --skipRemoteCache --skip-nx-cache --verbose
+	cd dist/apps/meerkat && npm ci --omit=dev --no-audit --no-fund --no-save
+	cd dist/apps/meerkat && npm install --no-package-lock --no-save prisma@7.0.1
+
+override_dh_auto_clean:
+	rm -rf node_modules dist .nx demo tmp apps/meerkat-docs/.docusaurus
+	rm -f *.snap *.db *.db-shm *.db-wal k8s/charts/meerkat-dsa/index.yaml data/zonal/*.csv
