doc: document how to build the debian package

--- a/debian/rules
+++ b/debian/rules
@@ -7,7 +7,7 @@ override_dh_auto_build:
 	npm ci --no-audit --no-fund --no-save
 	npx nx --tuiAutoExit=true --outputStyle=static run meerkat:build --skipNxCache --skipRemoteCache --skip-nx-cache --verbose
 	cd dist/apps/meerkat && npm ci --omit=dev --no-audit --no-fund --no-save
-	cd dist/apps/meerkat && npm install --no-package-lock --no-save prisma@7.0.1
+	cd dist/apps/meerkat && npm install --no-package-lock --no-audit --no-save prisma@7.0.1
 
 override_dh_auto_clean:
 	rm -rf node_modules dist .nx demo tmp apps/meerkat-docs/.docusaurus
