--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -23,10 +23,10 @@
             "@wildboar/idm": ["libs/idm/src/index.ts"],
             "@wildboar/ldap-socket": ["libs/ldap-socket/src/index.ts"],
             "@wildboar/ocsp-client": ["libs/ocsp-client/src/index.ts"],
-            "@wildboar/osi-net": ["libs/osi-net/src/index.js"],
+            "@wildboar/osi-net": ["libs/osi-net/src/index.ts"],
             "@wildboar/parity-schema/*": ["libs/parity-schema/*"],
             "@wildboar/passport-x500": ["libs/passport-x500/src/index.ts"],
-            "@wildboar/rose-transport": ["libs/rose-transport/src/index.js"],
+            "@wildboar/rose-transport": ["libs/rose-transport/src/index.ts"],
             "@wildboar/schema-level-ii": ["libs/schema-level-ii/src/index.ts"],
             "@wildboar/x500-auth": ["libs/x500-auth-ts/src/index.ts"],
             "@wildboar/x500-cli-config": ["libs/x500-cli-config/src/index.ts"],
