fix: doc and openrc issues

--- a/pkg/apk/APKBUILD
+++ b/pkg/apk/APKBUILD
@@ -47,10 +47,7 @@ package() {
     install -Dm755 \
         "$builddir/pkg/apk/initd/meerkat" \
         "$pkgdir/etc/init.d/meerkat"
-    install -d -m755 "$pkgdir/usr/share/man/man1"
-    install -d -m755 "$pkgdir/usr/share/man/man5"
-    install -m 0644 "$builddir/doc/man/man1/meerkat-dsa.1" "$pkgdir/usr/share/man/man1"
-    install -m 0644 "$builddir/doc/man/man1/meerkat-dsa.1" "$pkgdir/usr/share/man/man1"
+
 }
 
 check() {
@@ -67,4 +64,25 @@ check() {
         --verbose \
         --exclude x500-functional-tests
     # TODO: Could you run the integration tests here?
+}
+
+openrc() {
+    pkgdesc="$pkgdesc (OpenRC init scripts)"
+    install -Dm755 \
+        "$builddir/pkg/apk/initd/meerkat" \
+        "$subpkgdir/etc/init.d/meerkat"
+}
+
+doc() {
+    pkgdesc="$pkgdesc (documentation)"
+    install -d -m755 "$pkgdir/usr/share/man/man1"
+    install -d -m755 "$pkgdir/usr/share/man/man5"
+    install -m 0644 \
+        "$builddir/doc/man/man1/meerkat-dsa.1" \
+        "$pkgdir/usr/share/man/man1"
+    install -m 0644 \
+        "$builddir/doc/man/man5/meerkat.env.5" \
+        "$pkgdir/usr/share/man/man5"
+    gzip -9 "$subpkgdir/usr/share/man/man1/meerkat-dsa.1"
+    gzip -9 "$subpkgdir/usr/share/man/man5/meerkat.env.5"
 }
