fix: replace @prisma/adapter-better-sqlite3 with @prisma/adapter-libsql
Yes, it does work. It seems to be a drop-in replacement with about equal performance, too! The advantage of the libsql driver is that it uses the Node-API instead of native Add-ons, so it does not depend on particular versions of NodeJS: it just works across basically all versions!

--- a/.env
+++ b/.env
@@ -87,7 +87,7 @@ MEERKAT_DISABLE_ITOT_CHAINING=0
 MEERKAT_ITOTS_PORT=11102
 # MEERKAT_TEST_HOST=dsa01.test.mkdemo.wildboar.software
 # MEERKAT_TEST_PORT=4632
-MEERKAT_LOG_LEVEL=debug
+MEERKAT_LOG_LEVEL=warning
 # MEERKAT_LOG_JSON=1
 # NO_COLOR=1
 # MEERKAT_LOG_FILE=meerkat.log
