--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
         "@logtape/logtape": "npm:@jsr/logtape__logtape@^1.2.0-dev.369+2dd942c9",
         "@logtape/syslog": "npm:@jsr/logtape__syslog@^1.4.0-dev.425+3cd75150",
         "@mdx-js/react": "^3.0.0",
-        "@prisma/adapter-better-sqlite3": "^7.0.1",
+        "@prisma/adapter-libsql": "^7.2.0",
         "@prisma/client": "^7.0.1",
         "@std/html": "npm:@jsr/std__html@^1.0.5",
         "@std/semver": "npm:@jsr/std__semver@^1.0.7",
