hide prisma update available message

--- a/pkg/meerkat.env
+++ b/pkg/meerkat.env
@@ -78,3 +78,6 @@ MEERKAT_LOG_LEVEL=debug
 # MEERKAT_SIGNING_MIN_AUTH_LEVEL=0
 # MEERKAT_SIGNING_MIN_AUTH_LOCAL_QUALIFIER=0
 # MEERKAT_SIGNING_MIN_AUTH_SIGNED=0
+
+# There's no harm in removing this: it just disables an update message.
+PRISMA_HIDE_UPDATE_MESSAGE=1
