--- a/pkg/meerkat.service
+++ b/pkg/meerkat.service
@@ -12,6 +12,7 @@ RestartSec=30s
 WorkingDirectory=/var/lib/meerkat
 Environment=NODE_ENV=production
 Environment=DATABASE_URL=file:/var/lib/meerkat/meerkat.db
+Environment=PRISMA_HIDE_UPDATE_MESSAGE=1
 Environment=MEERKAT_LOG_SYSTEMD_LEVEL_PREFIX=1
 EnvironmentFile=/etc/meerkat/meerkat.env
 PassEnvironment=LANG NO_COLOR
