feat(meerkat): build nix package

--- a/.editorconfig
+++ b/.editorconfig
@@ -47,7 +47,7 @@ end_of_line = lf
 [pkg/PKGBUILD]
 end_of_line = lf
 
-[*.rb]
+[*.{rb,nix}]
 end_of_line = lf
 indent_size = 2
 indent_style = space
