chore: upgrade docusaurus dependencies

--- a/package.json
+++ b/package.json
@@ -31,13 +31,13 @@
   },
   "private": true,
   "dependencies": {
-    "@docusaurus/core": "3.7.0",
-    "@docusaurus/plugin-pwa": "3.7.0",
-    "@docusaurus/preset-classic": "3.7.0",
+    "@docusaurus/core": "3.9.2",
+    "@docusaurus/plugin-pwa": "3.9.2",
+    "@docusaurus/preset-classic": "3.9.2",
     "@logtape/file": "npm:@jsr/logtape__file@^1.4.0-dev.421+de803af6",
     "@logtape/logtape": "npm:@jsr/logtape__logtape@^1.2.0-dev.369+2dd942c9",
     "@logtape/syslog": "npm:@jsr/logtape__syslog@^1.4.0-dev.425+3cd75150",
-    "@mdx-js/react": "^3.0.0",
+    "@mdx-js/react": "3.1.1",
     "@prisma/adapter-libsql": "^7.2.0",
     "@prisma/client": "^7.0.1",
     "@std/html": "npm:@jsr/std__html@^1.0.5",
@@ -86,14 +86,14 @@
     "passport-strategy": "1.0.0",
     "phone": "3.1.69",
     "prism-react-renderer": "^2.1.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "serve-static": "^2.2.1",
     "tiny-typed-emitter": "2.1.0",
     "yargs": "^17.7.2"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "3.7.0",
+    "@docusaurus/module-type-aliases": "3.9.2",
     "@nx/esbuild": "22.3.3",
     "@nx/js": "22.3.3",
     "@nx/node": "22.3.3",
