--- a/package.json
+++ b/package.json
@@ -34,9 +34,9 @@
     "@docusaurus/core": "3.9.2",
     "@docusaurus/plugin-pwa": "3.9.2",
     "@docusaurus/preset-classic": "3.9.2",
-    "@logtape/file": "npm:@jsr/logtape__file@^1.4.0-dev.421+de803af6",
-    "@logtape/logtape": "npm:@jsr/logtape__logtape@^1.2.0-dev.369+2dd942c9",
-    "@logtape/syslog": "npm:@jsr/logtape__syslog@^1.4.0-dev.425+3cd75150",
+    "@logtape/file": "npm:@jsr/logtape__file@^2.0.1",
+    "@logtape/logtape": "npm:@jsr/logtape__logtape@^2.0.1",
+    "@logtape/syslog": "npm:@jsr/logtape__syslog@^2.0.1",
     "@mdx-js/react": "3.1.1",
     "@prisma/adapter-libsql": "^7.2.0",
     "@prisma/client": "^7.0.1",
@@ -100,9 +100,6 @@
     "@nx/vite": "22.3.3",
     "@nx/vitest": "22.3.3",
     "@nx/workspace": "22.3.3",
-    "@swc-node/register": "~1.9.1",
-    "@swc/core": "~1.5.7",
-    "@swc/helpers": "~0.5.11",
     "@types/cookie-parser": "^1.4.3",
     "@types/express": "4.17.21",
     "@types/express-session": "^1.17.5",
