doc: development of helm chart

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -7,8 +7,9 @@ on:
   #     - v2.*
   push:
     branches:
-      - main
-      - master
+      - never
+      # - main
+      # - master
 
 jobs:
 
